  as their first argument, as is usual; duplicite nouns were removed from
  their names.
- libgwydgets: Wrong position of the bottom axis label on exported pixmaps was
  fixed.

Modules:
- Shade: Crash on Mix checkbutton click was fixed.
- Color range: Crash upon tool switch when there was already a selection
  was fixed.
- Crop, Color range, Filters, Mask editor, Statistical function, Statistical
  quantities: Wrong selection boundaries when it was drawn `backwards' were
  fixed.
- Graph exports: User interface was made more consistent, memory leaks were
  fixed.


1.99.9 (2006-09-07)
Libraries:
- libgwydgets: Always insensitive 3D window light position controls were
  fixed.
- libgwydgets: 3D window controls not always reflecting 3D view's state were
  fixed.

Modules:
- File modules: Many `Unknown channel's were replaced with meaningful channel
  names, disabled metadata import was restored for most file types.
- Statistical quantities: Initial sensitivity of Save was fixed, preventing
  attempts to save nonexistent statistics that led to crashes.
- SPML import: Miscellaneous small fixes and improvements.
- Gwyfile: Rectangle, point and line selections are imported from 1.x files.
- ASCII export: Exports the current channel instead of always the first one.
- Shade: Mixing GUI was improved.


1.99.8 (2006-08-10)
Application:
- Crash on app exit when Document history is open was fixed.
- Recent files menu items have thumbnails.
- Data browser: Miscellaneous bugs were fixed.
- Data browser: Channel and graph titles are editable.
- Color axis does not display ticks/values when they are not applicable.
- Metadata more or less work again (although most modules have their creation
  still disabled).
- Translations updated: Czech.  New translations started: German.

Libraries:
- libgwyddion: Version information is now available.
- libgwyapp: Data browser can be used without window creation and its window
  can be controlled.